--- a/.github/workflows/merge-json-updates.yml
+++ b/.github/workflows/merge-json-updates.yml
@@ -1,14 +1,18 @@
 name: Merge JSON Updates to Main
 
+# Give the workflow permission to push commits
+permissions:
+  contents: write
+
 on:
   schedule:
-    # EDT versions (UTC-4)
+    # EDT (UTC-4)
     - cron: "5 11 * * *"   # 07:05 ET during EDT
     - cron: "20 23 * * *"  # 19:20 ET during EDT
-    # EST versions (UTC-5)
+    # EST (UTC-5)
     - cron: "5 12 * * *"   # 07:05 ET during EST
     - cron: "20 0 * * *"   # 19:20 ET during EST
-  workflow_dispatch:        # allow manual trigger anytime
+  workflow_dispatch:        # manual trigger merges immediately
 
 jobs:
   merge:
@@ -35,26 +39,30 @@ jobs:
       - name: Fetch json-updates
         run: git fetch origin json-updates
 
-      - name: Merge (time-gated for schedule, skipped for manual)
+      - name: Merge (manual runs always merge; scheduled runs only at ET times)
+        env:
+          EVENT_NAME: ${{ github.event_name }}
         run: |
-          # If this was triggered by the scheduler, enforce ET time window.
-          if [[ "${{ github.event_name }}" == "schedule" ]]; then
+          if [ "$EVENT_NAME" = "schedule" ]; then
             ET_NOW=$(TZ="America/New_York" date +'%H:%M')
             if [[ "$ET_NOW" != "07:05" && "$ET_NOW" != "19:20" ]]; then
-              echo "Scheduled run but not at the ET gate ($ET_NOW). Exiting."
+              echo "Scheduled run at $ET_NOW ET; outside merge window. Exiting."
               exit 0
             fi
             echo "Scheduled run at allowed ET time ($ET_NOW). Proceeding."
           else
-            echo "Manual run detected. Skipping time check and proceeding."
+            echo "Manual run detected — proceeding to merge immediately."
           fi
 
-          # Merge if there are changes
+          # Skip if no changes
           if git diff --quiet main origin/json-updates; then
             echo "No changes to merge."
-          else
-            echo "Changes detected in the following files:"
-            git diff --name-only main origin/json-updates
-            git merge origin/json-updates --no-edit
-            git push origin main
+            exit 0
           fi
+
+          echo "Changes detected in the following files:"
+          git diff --name-only main origin/json-updates
+
+          # Merge and push
+          git merge origin/json-updates --no-edit
+          git push origin main
